--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,12 +7,16 @@
 
 <h1>Heading  </h1>
 <p>This is a paragraph. <%= new Date() %>!</p>
+<form action="/Add" method="post" enctype="multipart/form-data">
 <button id="myButton"> Let's Try Some Cool Stuff </button>
+</form>
+<br/>
+<br/>
 
-<br/>
-<br/>
 <input type="text" name="scrapTeam" id="scrapTeam" />
+
 <button id="scrapButton"> Let's scrap stuff </button>
+
 <br/>
 <textarea id="result" rows="4" cols="200" >
 </textarea>
