--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 <h1>Heading  </h1>
 <p>This is a paragraph. <%= new Date() %>!</p>
 <form action="/Add" method="post" enctype="multipart/form-data">
-<button id="myButton"> Let's Try Some Cool Stuff </button>
+<button id="myButton"> Let'ss Try Some Cool Stuff </button>
 </form>
 <br/>
 <br/>
